pedra papel e tesoura
criei um jogo do avatar com a mecanica apresentada no pedra papel e tesoura

--- a/aula01.html
+++ b/aula01.html
@@ -14,11 +14,11 @@
     <div class="content">
       <h2>Conversor Cybernetico de Dinheiro!</h2>
       <p>Valor em Wons: <input type='number' id='won'/>
-      <button onclick="conversor()"><strong>converter em Reais</strong></button><p/>
+      <button onclick="conversor()"><strong>converter em Reais</strong></button></p>
       <p>Valor em Dorlar: <input type='number' id='dolar'/>
-      <button onclick="conversor_dolar()"><strong>converter em Reais</strong></button><p/>
+      <button onclick="conversor_dolar()"><strong>converter em Reais</strong></button></p>
       <p>Valor em Euros: <input type='number' id='euro'/>
-      <button onclick="conversor_euro()"><strong>converter em Reais</strong></button><p/>
+      <button onclick="conversor_euro()"><strong>converter em Reais</strong></button></p>
     </div>
   </div>
   <footer>Criado por José Webster Lima Cavalcante - Imersão DEV - 2025</footer>
