--- a/aula02.html
+++ b/aula02.html
@@ -14,9 +14,9 @@
     <div class="content">
       <h2>Luta Elemental de Avatar!</h2>
       <p>1-Fogo, 2-Ar, 3-Água, 4-Terra</p>
-      <p>Digite o <strong>Nnúmero</strong> de um dos elementos acima</p>
+      <p>Digite o <strong>Número</strong> de um dos elementos acima</p>
       <input type='number' id='elemento'/>
-      <p><button onclick="lutar()"><strong>converter em Reais</strong></button></p>
+      <p><button onclick="lutar()"><strong>Iniciar Luta de Elementos</strong></button></p>
       <div id="res">
         <!--Resposta-->
       </div>
