--- a/aula02.html
+++ b/aula02.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Document</title>
-    <link rel="stylesheet" href="css/aula02.css"/>
-    <script src="js/aula02.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="css/aula02.css" />
+
 </head>
+
 <body>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/1/1d/Logo_de_Avatar_la_leyenda_de_Aang.png" alt="Logo" class="logo">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/1/1d/Logo_de_Avatar_la_leyenda_de_Aang.png" alt="Logo"
+    class="logo">
 
   <div class="conteiner">
     <div class="content">
       <h2>Luta Elemental de Avatar!</h2>
       <p>1-Fogo, 2-Ar, 3-Água, 4-Terra</p>
       <p>Digite o <strong>Número</strong> de um dos elementos acima</p>
-      <input type='number' id='elemento'/>
+      <input type='number' id='elemento' />
       <p><button onclick="lutar()"><strong>Iniciar Luta de Elementos</strong></button></p>
       <div id="res">
         <!--Resposta-->
@@ -23,6 +26,7 @@
     </div>
   </div>
   <footer>Criado por José Webster Lima Cavalcante - Imersão DEV - 2025</footer>
+  <script src="js/aula02.js"></script>
 </body>
-</body>
+
 </html>
